# shadowdeploy

./: .gitignore  BUIDL_DETAILS.md  JUDGING_SCORECARD.md  LICENSE  PROMPT_V2.md  README.md  SPRINT_TRACKER.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
demo_evidence/: cost_report.json  diff_report.json  diff_report.md  evidence_manifest.json  execution_log.txt  human_approval.json  kpi_dashboard.txt  sample_dataset.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RUNBOOK.md  SECURITY.md  TESTING.md  VERIFICATION.md  WELL_ARCHITECTED.md
examples/: captures.json  config.json
infra/cdk/: shadowdeploy-stack.ts
infra/terraform/: main.tf
live-run/: 01_init.ps1  02_plan.ps1  README.md  _runner.ps1  main.tf  run_apply.ps1  run_apply_reconcile.ps1  run_cleanup.ps1  run_destroy.ps1  run_evidence.ps1  run_preflight.ps1  run_state.ps1  run_verify_clean.ps1
live-run/evidence/: EVIDENCE_INDEX.md  eventbridge_rule_billing_100_alarm.json
live-run/scripts-setup/: README.md  check_remotes.ps1  cleanup_home_root.ps1  copy_shots.ps1  find_kiro2.ps1  find_shots.ps1  install_tf.ps1  kiro_check.ps1  push_to_github.ps1
scripts/: generate_demo_evidence.py
src/shadowdeploy/: cli.py  orchestrator.py
tests/functional/: test_demo_evidence.py  test_sprint10_cli.py  test_sprint10_orchestrator.py  test_sprint6_handlers.py
tests/unit/: test_sprint1_core.py  test_sprint2_capture.py  test_sprint3_normalize.py  test_sprint4_diff.py  test_sprint5_metrics.py  test_sprint7_reporting.py  test_sprint8_cost.py  test_sprint9_iac.py
(+16 files in other folders)
