[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowdeploy"
version = "1.0.0"
description = "ShadowDeploy — bounded shadow-testing harness that mirrors sampled production traffic, diffs outputs without serving them, and reports divergence before promotion."
readme = "docs/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ShadowDeploy" }]
keywords = ["aws", "shadow-testing", "deployment-safety", "well-architected", "operational-excellence"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "coverage>=7.4"]

[project.scripts]
shadowdeploy = "shadowdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: unit tests",
    "functional: cross-module functional tests",
    "negative: failure-path / guard tests",
]

[tool.coverage.run]
branch = true
source = ["shadowdeploy", "scripts"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
